구글 로그인 구현

--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -77,12 +77,18 @@
             </div>
 
             <div style="margin-top: 5px">
-                <a href="naverLogin" style="width: 200px; background-color: limegreen; border: none;" class="btn btn-primary">네이버 로그인 </a>
+                <a href="googleLogin" style="width: 200px; background-color: silver; color:black; border: none;" class="btn btn-primary">구글 로그인 </a>
             </div>
+
 
             <div style="margin-top: 5px">
                 <a href="kakaoLogin" style="width: 200px; background-color: yellow; color:black; border: none;" class="btn btn-primary">카카오 로그인 </a>
             </div>
+
+            <div style="margin-top: 5px">
+                <a href="naverLogin" style="width: 200px; background-color: limegreen; border: none;" class="btn btn-primary">네이버 로그인 </a>
+            </div>
+
         </form>
     </main>
     </body>
